LogEntryBean entfernt